# setuptools-ziglang

./: noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg  setuptools_ziglang.py
src/setuptools_ziglang/: __init__.py  build_zig_ext.py  zigcompiler.py  zigextension.py
testing/c/: c_ext.c  pyproject.toml  setup.py  sum.c
testing/c/src/: c_ext.c
testing/c_sum/: setup.py
testing/hpy/: hello.c  hpy-test.c  setup.py
testing/zaml/: pyproject.toml  setup.py
testing/zig/: pyproject.toml  setup.py
testing/zig_sum/: setup.py
